--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <div>  
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla esse, rem qui magnam odio sit error, iste odit amet dolorum corrupti culpa voluptatibus libero distinctio rerum obcaecati maiores, reprehenderit veritatis!
+    </p>
   </div>
 </body>
 </html>
